k8s-manifests/blog-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: blog-service
  namespace: bluinsights
spec:
  replicas: 2
  selector:
    matchLabels:
      app: blog-service
  template:
    metadata:
      labels:
        app: blog-service
    spec:
      containers:
      - name: blog-service
        image: bludivehub/bluinsights-blog-service:latest
        ports:
        - containerPort: 5001
---
apiVersion: v1
kind: Service
metadata:
  name: blog-service
  namespace: bluinsights
spec:
  selector:
    app: blog-service
  ports:
  - port: 5001
    targetPort: 5001
  type: ClusterIP
