k8s-manifests/comment-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: comment-service
  namespace: bluinsights
spec:
  replicas: 2
  selector:
    matchLabels:
      app: comment-service
  template:
    metadata:
      labels:
        app: comment-service
    spec:
      containers:
      - name: comment-service
        image: bludivehub/bluinsights-comment-service:latest
        ports:
        - containerPort: 5002
---
apiVersion: v1
kind: Service
metadata:
  name: comment-service
  namespace: bluinsights
spec:
  selector:
    app: comment-service
  ports:
  - port: 5002
    targetPort: 5002
  type: ClusterIP
