k8s-manifests/frontend-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend-service
  namespace: bluinsights
spec:
  replicas: 2
  selector:
    matchLabels:
      app: frontend-service
  template:
    metadata:
      labels:
        app: frontend-service
    spec:
      containers:
      - name: frontend-service
        image: bludivehub/bluinsights-frontend-service:latest
        ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: frontend-service
  namespace: bluinsights
spec:
  selector:
    app: frontend-service
  ports:
  - port: 80
    targetPort: 80
  type: ClusterIP
