k8s-manifests/user-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: user-service
  namespace: bluinsights
spec:
  replicas: 2
  selector:
    matchLabels:
      app: user-service
  template:
    metadata:
      labels:
        app: user-service
    spec:
      containers:
      - name: user-service
        image: bludivehub/bluinsights-user-service:latest
        ports:
        - containerPort: 5050
---
apiVersion: v1
kind: Service
metadata:
  name: user-service
  namespace: bluinsights
spec:
  selector:
    app: user-service
  ports:
  - port: 5050
    targetPort: 5050
  type: ClusterIP
